# Template-Project-Raylib-CPP-VSCode

./: .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  Template-Project-Raylib-CPP-VSCode.code-workspace
src/: main.cpp
